Fix some colours in dark mode

--- a/ArticleTemplates/assets/scss/themes/darkMode/_darkModeArticle.scss
+++ b/ArticleTemplates/assets/scss/themes/darkMode/_darkModeArticle.scss
@@ -107,6 +107,7 @@
         figure figcaption,
         .byline,
         .sponsorship__formatted-sponsor-name,
+        .listen-to-article__container,
         .listen-to-article__container .audio-player__info__label,
         .listen-to-article__container .audio-player__info__duration {
             color: $warmGreyFour !important;
